--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
+
     <string name="app_name">My Application</string>
     <string name="bouton_vrai">Bouton Vrai</string>
     <string name="bouton_faux">Bouton Faux</string>
     <string name="text" />
     <string name="question_precedente">Question précédente</string>
     <string name="question_suivante">Question suivante</string>
-    <string name="question_oceans">L\'océan Pacifique est plus grand que l\'océan Atlantique.</string>
-    <string name="question_mideast">Le canal de Suez relie la Mer Rouge et l\'océan Indien.</string>
-    <string name="question_africa">La source du Nile est en Egypte.</string>
-    <string name="question_americas">L\'Amazone est la rivière la plus longue d\'Amèrique du Sud.</string>
-    <string name="question_asia">Le lac Baikal est le lac d\'eau douce le plus ancien et le plus profond.</string>
+    <string name="question_1">L\'océan Pacifique est plus grand que l\'océan Atlantique.</string>
+    <string name="question_2">Le canal de Suez relie la Mer Rouge et l\'océan Indien.</string>
+    <string name="question_3">La source du Nile est en Egypte.</string>
+    <string name="question_4">L\'Amazone est la rivière la plus longue d\'Amèrique du Sud.</string>
+    <string name="question_5">Le lac Baikal est le lac d\'eau douce le plus ancien et le plus profond.</string>
+    <string name="correct_toast">Réponse Correct</string>
+    <string name="incorrect_toast">Réponse Incorrect</string>
+    <string name="question_text" />
 </resources>
