push  11/01/2024 17h30 bug with btnAide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="question_text" />
     <string name="txt_attention" >tu as utilisé une aide</string>
     <string name="btn_affiche_aide" >Aide</string>
+    <string name="toast_Aide" >Tu as été Aidé </string>
 </resources>
